gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-feature-gate.rs
#![forbid(unstable_features)]
#![feature(intrinsics)] // { dg-error "" "" { target *-*-* } }

fn main() { }

